src/test/resources/30/single/opf/valid/vocab-a11y-credentials-in-link.opf
<?xml version="1.0" encoding="UTF-8"?>
<package xmlns="http://www.idpf.org/2007/opf" version="3.0" unique-identifier="uid"
    xmlns:dc="http://purl.org/dc/elements/1.1/"
    prefix="a11y: http://www.idpf.org/epub/vocab/package/a11y/#">
    <metadata>
        <dc:identifier id="uid">uid</dc:identifier>
        <dc:title>Test</dc:title>
        <dc:language>en</dc:language>
        <meta property="dcterms:modified">2011-08-19T12:00:00Z</meta>
        <meta property="a11y:certifiedBy">Accessibility Testers Group</meta>
        <link rel="a11y:certifierReport" href="http://example.org/report"/>
        <link rel="a11y:certifierCredential" href="https://example.com/a11y/credential"/>
    </metadata>
    <manifest>
        <item id="t001" href="contents.xhtml" properties="nav" media-type="application/xhtml+xml"/>
    </manifest>
    <spine>
        <itemref idref="t001"/>
    </spine>
</package>
