src/test/resources/30/single/opf/invalid/minlength.opf
<?xml version="1.0" encoding="UTF-8"?>
<?oxygen RNGSchema="../../../src/schema/package-30.rnc" type="compact"?>
<?oxygen SCHSchema="../../../src/schema/package-30.sch"?>
<package xmlns="http://www.idpf.org/2007/opf" version="3.0" unique-identifier="uid" xmlns:dc="http://purl.org/dc/elements/1.1/">
    <!-- minimum lengths of dc:*, meta nodes -->
    <metadata>
        <dc:identifier id="uid"></dc:identifier>
        <dc:title> </dc:title>        
        <dc:language>en</dc:language>
        <meta property="dcterms:valid"></meta>
        <meta property="">foo</meta>
        <meta property=" ">foo</meta>
    </metadata> 
    <manifest>
        <item id="t001" href="contents.xhtml" properties="nav" media-type="application/xhtml+xml" />        
    </manifest>
    <spine>
        <itemref idref="t001" />
    </spine>
</package>